--- a/style.css
+++ b/style.css
@@ -1,90 +1,124 @@
 body {
-  background-color: #3F4244;
+  font-family: "Optima", sans-serif;
+  background-color: #323031;
+  background-image: url("img/IMG_0012")
 }
-
-.superheader .superheader-content img {
-  height: 100px;
-  width: 200px;
-  border: 5px solid #efefef;
+h1 {
+	font-family: "Century Gothic", sans-serif;
+	font-size: 16px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 26.4px;
+}
+p {
+  font-family: "Optima", sans-serif;
+  text-align: justify;
+  font-size: 14px;
+}
+.title {
+  display: flex;
+  position: absolute;
+  color: #F2C78C;
+  font-size: 25px;
+  margin-left: 5px;
+  text-shadow: 1px 1px black;
+}
+.superheader-content img {
+  height: 245px;
+  width: 800px;
+  margin: 0 auto;
 }
 .superheader {
   display: flex;
   width: 100%;
-  background-color: #3E576B;
-  color: #efefef;
-  text-align: center;
   padding-top: 4px;
-  padding-bottom: 4px;
+  padding-bottom: 8px;
   justify-content: center;
+  height: 250px;
 }
 .superheader-content {
-  font-family: arial;
   font-size: 50px;
-  width: 70%;
+  width: 800px;
   height: 50px;
-  background-color: #3E576B;
   margin: 4px;
+  display: flex;
+}
+.photo-text {
+  font-family: "Optima", sans-serif;
+  display: flex;
 }
 .container {
-  font-family: arial;
-  background-color: #efefef;
-  color: #efefef;
+  font-family: "Century Gothic", sans-serif;
+  background-color: #A44200;
+  color: #F2C18A;
   display: flex;
   flex-direction: row;
-  width: 70%;
+  width: 95%;
   height: 500px;
   margin: 0 auto;
   position: relative;
 }
 .column-one {
-  background-color: #efefef;
-  color: #ffcb05;
+  background-color: #D58936;
+  color: #F2C18A;
   display: flex;
   flex: 1.75;
   flex-direction: column;
-  margin: 4px;
+  margin: 2px;
 }
 .header {
-  background-color: #3E576B;
-  font-size: 72px;
-  color: #efefef;
-  flex: .25;
-  margin: 4px;
+  font-family: "Optima", sans-serif;
+  background-color: #D58936;
+  font-size: 46px;
+  color: #69140E;
+  flex: .10;
   text-align: center;
 }
 .body {
-  background-color: #3E576B;
-  color: #efefef;
-  margin: 4px;
-  flex: .75;
+  font-family: "Optima", sans-serif;
+  background-color: #D58936;
+  color: #69140E;
+  flex: .90;
+  padding: 10px;
+  text-align: justify;
 }
 .column-two {
-  background-color: #3E576B;
+  background-color: #D58936;
   flex: .5;
   display: flex;
-  margin: 4px;
   flex-direction: column;
+  margin: 2px;
 }
 .row-one {
-  background-color: #3E576B;
-  color: #3E576B;
+  background-color: #A44200;
+  color: #F2C78C;
   flex: 1;
-  margin: 5px;
+  margin: 2px;
+  padding: 5px;
+  text-align: center;
 }
 .row-two {
-  background-color: #3E576B;
+  background-color: #69140E;
   flex: 1;
-  margin: 5px;
+  margin: 2px;
+  padding: 10px;
+  text-align: center;
 }
 .floating-action-button {
+  font-family: "Century Gothic", sans-serif;
   border-radius: 40px;
-  border: 3px solid #00274c;
-  background-color: #3E576B;
+  border: 4px solid #F2C18A;
+  background-color: #3C1518;
   height: 20px;
-  width: 60px;
+  width: 80px;
   position: absolute;
   bottom: 20px;
   text-align: center;
   padding-top: 20px;
   padding-bottom: 20px;
+}
+a {
+  color: #D58936;
+  text-decoration: none;
 }
